Translations by ayyasoma to translation/it/soma/sutta/sn/sn22/sn22.79_translation-it-soma.json

--- a/translation/it/soma/sutta/sn/sn22/sn22.79_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.79_translation-it-soma.json
@@ -10,7 +10,7 @@
   "sn22.79:3.3": ".. ",
   "sn22.79:3.4": "sente... ",
   "sn22.79:5.1": "E perché si chiamano creazioni??? ",
-  "sn22.79:5.2": "Perche' creano il condizionato... //Perche' creano (fabbricano/disegnano) il creato... ",
+  "sn22.79:5.2": "Perche' creano le condizioni... //Perche' creano il condizionato... //Perche' creano (fabbricano/disegnano) il creato... ",
   "sn22.79:5.3": "E cosa creano? ",
   "sn22.79:5.4": "Creano le condizioni affince' la forma sia concepita come propria forma... "
 }
