--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -17,5 +17,6 @@
   "dhp276:1": "Svoj napor uložiti morate, ",
   "dhp276:2": "Budni tek pravac pokazuju. ",
   "dhp276:3": "Ko putem ovim sabran ide, ",
-  "dhp276:4": "od okova Mārinih oslobođen biva. "
+  "dhp276:4": "od okova Mārinih oslobođen biva. ",
+  "dhp277:1": "„Sve tvorevine su prolazne.\" "
 }
