--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -20,5 +20,6 @@
   "dhp276:4": "od okova Mārinih oslobođen biva. ",
   "dhp277:1": "„Sve tvorevine su prolazne.\" ",
   "dhp277:2": "Kad mudrošću ovo uvidimo, ",
-  "dhp277:3": "od patnje se okrećemo: "
+  "dhp277:3": "od patnje se okrećemo: ",
+  "dhp277:4": "to je put ka pročišćenju. "
 }
