--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -21,5 +21,6 @@
   "dhp277:1": "„Sve tvorevine su prolazne.\" ",
   "dhp277:2": "Kad mudrošću ovo uvidimo, ",
   "dhp277:3": "od patnje se okrećemo: ",
-  "dhp277:4": "to je put ka pročišćenju. "
+  "dhp277:4": "to je put ka pročišćenju. ",
+  "dhp278:1": "„Sve tvorevine su nezadovoljavajuće.\" "
 }
