--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -22,5 +22,6 @@
   "dhp277:2": "Kad mudrošću ovo uvidimo, ",
   "dhp277:3": "od patnje se okrećemo: ",
   "dhp277:4": "to je put ka pročišćenju. ",
-  "dhp278:1": "„Sve tvorevine su nezadovoljavajuće.\" "
+  "dhp278:1": "„Sve tvorevine su nezadovoljavajuće.\" ",
+  "dhp278:2": "Kad mudrošću ovo uvidimo, "
 }
