Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -25,5 +25,6 @@
   "dhp278:1": "„Sve tvorevine su nezadovoljavajuće.\" ",
   "dhp278:2": "Kad mudrošću ovo uvidimo, ",
   "dhp278:3": "od patnje se okrećemo: ",
-  "dhp278:4": "to je put ka pročišćenju. "
+  "dhp278:4": "to je put ka pročišćenju. ",
+  "dhp279:1": "„Sve stvari su bez trajne osnove.\" "
 }
