--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -26,5 +26,6 @@
   "dhp278:2": "Kad mudrošću ovo uvidimo, ",
   "dhp278:3": "od patnje se okrećemo: ",
   "dhp278:4": "to je put ka pročišćenju. ",
-  "dhp279:1": "„Sve stvari su bez trajne osnove.\" "
+  "dhp279:1": "„Sve stvari su bez trajne osnove.\" ",
+  "dhp279:2": "Kad mudrošću ovo uvidimo, "
 }
