--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -28,5 +28,6 @@
   "dhp278:4": "to je put ka pročišćenju. ",
   "dhp279:1": "„Sve stvari su bez trajne osnove.\" ",
   "dhp279:2": "Kad mudrošću ovo uvidimo, ",
-  "dhp279:3": "od patnje se okrećemo: "
+  "dhp279:3": "od patnje se okrećemo: ",
+  "dhp279:4": "to je put ka pročišćenju. "
 }
