Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -29,5 +29,6 @@
   "dhp279:1": "„Sve stvari su bez trajne osnove.\" ",
   "dhp279:2": "Kad mudrošću ovo uvidimo, ",
   "dhp279:3": "od patnje se okrećemo: ",
-  "dhp279:4": "to je put ka pročišćenju. "
+  "dhp279:4": "to je put ka pročišćenju. ",
+  "dhp280:1": "Ko ne uloži napor kad je tome vreme, "
 }
