--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -31,5 +31,6 @@
   "dhp279:3": "od patnje se okrećemo: ",
   "dhp279:4": "to je put ka pročišćenju. ",
   "dhp280:1": "Ko ne uloži napor kad je tome vreme, ",
-  "dhp280:2": "mlad i snažan, ali lenj, "
+  "dhp280:2": "mlad i snažan, ali lenj, ",
+  "dhp280:3": "bezvoljan i obuzet mislima tmurnim, "
 }
