Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -34,5 +34,6 @@
   "dhp280:2": "mlad i snažan, ali lenj, ",
   "dhp280:3": "bezvoljan i obuzet mislima tmurnim, ",
   "dhp280:4": "taj put mudrosti ne nalazi. ",
-  "dhp281:1": "Pažljiv na reči, sabranog uma, "
+  "dhp281:1": "Pažljiv na reči, sabranog uma, ",
+  "dhp281:2": "ne počini bilo šta loše telom; "
 }
