Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -36,5 +36,6 @@
   "dhp280:4": "taj put mudrosti ne nalazi. ",
   "dhp281:1": "Pažljiv na reči, sabranog uma, ",
   "dhp281:2": "ne počini bilo šta loše telom; ",
-  "dhp281:3": "ta tri izvora dela pročisti "
+  "dhp281:3": "ta tri izvora dela pročisti ",
+  "dhp281:4": "i put koji objaviše mudri pređi. "
 }
