Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -38,5 +38,6 @@
   "dhp281:2": "ne počini bilo šta loše telom; ",
   "dhp281:3": "ta tri izvora dela pročisti ",
   "dhp281:4": "i put koji objaviše mudri pređi. ",
-  "dhp282:1": "Vežbanjem znanje se stiče, "
+  "dhp282:1": "Vežbanjem znanje se stiče, ",
+  "dhp282:2": "a nevežbanjem gubi; "
 }
