Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -39,5 +39,6 @@
   "dhp281:3": "ta tri izvora dela pročisti ",
   "dhp281:4": "i put koji objaviše mudri pređi. ",
   "dhp282:1": "Vežbanjem znanje se stiče, ",
-  "dhp282:2": "a nevežbanjem gubi; "
+  "dhp282:2": "a nevežbanjem gubi; ",
+  "dhp282:3": "znajući ta dva puta "
 }
