--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -40,5 +40,6 @@
   "dhp281:4": "i put koji objaviše mudri pređi. ",
   "dhp282:1": "Vežbanjem znanje se stiče, ",
   "dhp282:2": "a nevežbanjem gubi; ",
-  "dhp282:3": "znajući ta dva puta "
+  "dhp282:3": "znajući ta dva puta ",
+  "dhp282:4": "nastanka i nestanka, "
 }
