Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -42,5 +42,6 @@
   "dhp282:2": "a nevežbanjem gubi; ",
   "dhp282:3": "znajući ta dva puta ",
   "dhp282:4": "nastanka i nestanka, ",
-  "dhp282:5": "tako sebe usmeri, "
+  "dhp282:5": "tako sebe usmeri, ",
+  "dhp282:6": "da mudrost u tebi raste. "
 }
