Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -44,5 +44,6 @@
   "dhp282:4": "nastanka i nestanka, ",
   "dhp282:5": "tako sebe usmeri, ",
   "dhp282:6": "da mudrost u tebi raste. ",
-  "dhp283:1": "Šumu strasti posecite, a ne jedno drvo. "
+  "dhp283:1": "Šumu strasti posecite, a ne jedno drvo. ",
+  "dhp283:2": "Iz te šume vas strah vreba. "
 }
