--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -46,5 +46,6 @@
   "dhp282:6": "da mudrost u tebi raste. ",
   "dhp283:1": "Šumu strasti posecite, a ne jedno drvo. ",
   "dhp283:2": "Iz te šume vas strah vreba. ",
-  "dhp283:3": "Uklonivši stabla sve sa korenom, "
+  "dhp283:3": "Uklonivši stabla sve sa korenom, ",
+  "dhp283:4": "slobodni budite, o monasi. "
 }
