Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -47,5 +47,6 @@
   "dhp283:1": "Šumu strasti posecite, a ne jedno drvo. ",
   "dhp283:2": "Iz te šume vas strah vreba. ",
   "dhp283:3": "Uklonivši stabla sve sa korenom, ",
-  "dhp283:4": "slobodni budite, o monasi. "
+  "dhp283:4": "slobodni budite, o monasi. ",
+  "dhp284:1": "Jer sve dok čak i najmanji koren strasti "
 }
