--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -48,5 +48,6 @@
   "dhp283:2": "Iz te šume vas strah vreba. ",
   "dhp283:3": "Uklonivši stabla sve sa korenom, ",
   "dhp283:4": "slobodni budite, o monasi. ",
-  "dhp284:1": "Jer sve dok čak i najmanji koren strasti "
+  "dhp284:1": "Jer sve dok čak i najmanji koren strasti ",
+  "dhp284:2": "muškarca prema ženi posečen nije, "
 }
