Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -50,5 +50,6 @@
   "dhp283:4": "slobodni budite, o monasi. ",
   "dhp284:1": "Jer sve dok čak i najmanji koren strasti ",
   "dhp284:2": "muškarca prema ženi posečen nije, ",
-  "dhp284:3": "um je njegov vezan, "
+  "dhp284:3": "um je njegov vezan, ",
+  "dhp284:4": "kao i tele za kravlje vime. "
 }
