--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -51,5 +51,6 @@
   "dhp284:1": "Jer sve dok čak i najmanji koren strasti ",
   "dhp284:2": "muškarca prema ženi posečen nije, ",
   "dhp284:3": "um je njegov vezan, ",
-  "dhp284:4": "kao i tele za kravlje vime. "
+  "dhp284:4": "kao i tele za kravlje vime. ",
+  "dhp285:1": "Iščupaj žudnju u sebi, "
 }
