Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -53,5 +53,6 @@
   "dhp284:3": "um je njegov vezan, ",
   "dhp284:4": "kao i tele za kravlje vime. ",
   "dhp285:1": "Iščupaj žudnju u sebi, ",
-  "dhp285:2": "k’o rukom svojom ljiljan jesenji; "
+  "dhp285:2": "k’o rukom svojom ljiljan jesenji; ",
+  "dhp285:3": "samo put smirenja u sebi neguj, "
 }
