Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -54,5 +54,6 @@
   "dhp284:4": "kao i tele za kravlje vime. ",
   "dhp285:1": "Iščupaj žudnju u sebi, ",
   "dhp285:2": "k’o rukom svojom ljiljan jesenji; ",
-  "dhp285:3": "samo put smirenja u sebi neguj, "
+  "dhp285:3": "samo put smirenja u sebi neguj, ",
+  "dhp285:4": "slobodu što je Blaženi poduči. "
 }
