--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -55,5 +55,6 @@
   "dhp285:1": "Iščupaj žudnju u sebi, ",
   "dhp285:2": "k’o rukom svojom ljiljan jesenji; ",
   "dhp285:3": "samo put smirenja u sebi neguj, ",
-  "dhp285:4": "slobodu što je Blaženi poduči. "
+  "dhp285:4": "slobodu što je Blaženi poduči. ",
+  "dhp286:1": "„Ovde ću provesti vreme monsuna, "
 }
