Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -58,5 +58,6 @@
   "dhp285:4": "slobodu što je Blaženi poduči. ",
   "dhp286:1": "„Ovde ću provesti vreme monsuna, ",
   "dhp286:2": "ovde zimu i leto” ",
-  "dhp286:3": "tako budala razmišlja, "
+  "dhp286:3": "tako budala razmišlja, ",
+  "dhp286:4": "jer opasnosti ne razume. "
 }
