--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -60,5 +60,6 @@
   "dhp286:2": "ovde zimu i leto” ",
   "dhp286:3": "tako budala razmišlja, ",
   "dhp286:4": "jer opasnosti ne razume. ",
-  "dhp287:1": "Onoga ko se uma vezanog ushićuje "
+  "dhp287:1": "Onoga ko se uma vezanog ushićuje ",
+  "dhp287:2": "porodom svojim ili stadom, "
 }
