Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -61,5 +61,6 @@
   "dhp286:3": "tako budala razmišlja, ",
   "dhp286:4": "jer opasnosti ne razume. ",
   "dhp287:1": "Onoga ko se uma vezanog ushićuje ",
-  "dhp287:2": "porodom svojim ili stadom, "
+  "dhp287:2": "porodom svojim ili stadom, ",
+  "dhp287:3": "smrt odnosi nenadano, "
 }
