Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -62,5 +62,6 @@
   "dhp286:4": "jer opasnosti ne razume. ",
   "dhp287:1": "Onoga ko se uma vezanog ushićuje ",
   "dhp287:2": "porodom svojim ili stadom, ",
-  "dhp287:3": "smrt odnosi nenadano, "
+  "dhp287:3": "smrt odnosi nenadano, ",
+  "dhp287:4": "kao kad velika bujica zbriše usnulo selo. "
 }
