--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -63,5 +63,6 @@
   "dhp287:1": "Onoga ko se uma vezanog ushićuje ",
   "dhp287:2": "porodom svojim ili stadom, ",
   "dhp287:3": "smrt odnosi nenadano, ",
-  "dhp287:4": "kao kad velika bujica zbriše usnulo selo. "
+  "dhp287:4": "kao kad velika bujica zbriše usnulo selo. ",
+  "dhp288:1": "Sinovi te ne mogu zaštititi, "
 }
