--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -64,5 +64,6 @@
   "dhp287:2": "porodom svojim ili stadom, ",
   "dhp287:3": "smrt odnosi nenadano, ",
   "dhp287:4": "kao kad velika bujica zbriše usnulo selo. ",
-  "dhp288:1": "Sinovi te ne mogu zaštititi, "
+  "dhp288:1": "Sinovi te ne mogu zaštititi, ",
+  "dhp288:2": "ni otac, ni rodbina ostala; "
 }
