Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -66,5 +66,6 @@
   "dhp287:4": "kao kad velika bujica zbriše usnulo selo. ",
   "dhp288:1": "Sinovi te ne mogu zaštititi, ",
   "dhp288:2": "ni otac, ni rodbina ostala; ",
-  "dhp288:3": "kad te jednom smrt ščepa, "
+  "dhp288:3": "kad te jednom smrt ščepa, ",
+  "dhp288:4": "srodnici ti nikakva zaštita nisu. "
 }
