Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -67,5 +67,6 @@
   "dhp288:1": "Sinovi te ne mogu zaštititi, ",
   "dhp288:2": "ni otac, ni rodbina ostala; ",
   "dhp288:3": "kad te jednom smrt ščepa, ",
-  "dhp288:4": "srodnici ti nikakva zaštita nisu. "
+  "dhp288:4": "srodnici ti nikakva zaštita nisu. ",
+  "dhp289:1": "Zato nek mudrac vrlinom obuzdan, "
 }
