Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -69,5 +69,6 @@
   "dhp288:3": "kad te jednom smrt ščepa, ",
   "dhp288:4": "srodnici ti nikakva zaštita nisu. ",
   "dhp289:1": "Zato nek mudrac vrlinom obuzdan, ",
-  "dhp289:2": "znajući sve ovo, "
+  "dhp289:2": "znajući sve ovo, ",
+  "dhp289:3": "što pre sebi prokrči put "
 }
