--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp273-289_translation-sr-brankokovacevic.json
@@ -70,5 +70,6 @@
   "dhp288:4": "srodnici ti nikakva zaštita nisu. ",
   "dhp289:1": "Zato nek mudrac vrlinom obuzdan, ",
   "dhp289:2": "znajući sve ovo, ",
-  "dhp289:3": "što pre sebi prokrči put "
+  "dhp289:3": "što pre sebi prokrči put ",
+  "dhp289:4": "ka probuđenju. "
 }
