--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -1,4 +1,5 @@
 {
   "dhp290:0.1": "Kratka zbirka Budnih govora ",
-  "dhp290:0.2": "Reči mudrosti "
+  "dhp290:0.2": "Reči mudrosti ",
+  "dhp290:0.3": "Razno "
 }
