--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -1,5 +1,6 @@
 {
   "dhp290:0.1": "Kratka zbirka Budnih govora ",
   "dhp290:0.2": "Reči mudrosti ",
-  "dhp290:0.3": "Razno "
+  "dhp290:0.3": "Razno ",
+  "dhp290:1": "Uvidevši da se odricanjem od manje sreće "
 }
