Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -2,5 +2,6 @@
   "dhp290:0.1": "Kratka zbirka Budnih govora ",
   "dhp290:0.2": "Reči mudrosti ",
   "dhp290:0.3": "Razno ",
-  "dhp290:1": "Uvidevši da se odricanjem od manje sreće "
+  "dhp290:1": "Uvidevši da se odricanjem od manje sreće ",
+  "dhp290:2": "može zadobiti veća, "
 }
