Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -4,5 +4,6 @@
   "dhp290:0.3": "Razno ",
   "dhp290:1": "Uvidevši da se odricanjem od manje sreće ",
   "dhp290:2": "može zadobiti veća, ",
-  "dhp290:3": "oštrouman nek napusti manju "
+  "dhp290:3": "oštrouman nek napusti manju ",
+  "dhp290:4": "i okrene se većoj sreći. "
 }
