Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -6,5 +6,6 @@
   "dhp290:2": "može zadobiti veća, ",
   "dhp290:3": "oštrouman nek napusti manju ",
   "dhp290:4": "i okrene se većoj sreći. ",
-  "dhp291:1": "Ko sebi sreću gradi "
+  "dhp291:1": "Ko sebi sreću gradi ",
+  "dhp291:2": "stvarajući muku drugima, "
 }
