Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -8,5 +8,6 @@
   "dhp290:4": "i okrene se većoj sreći. ",
   "dhp291:1": "Ko sebi sreću gradi ",
   "dhp291:2": "stvarajući muku drugima, ",
-  "dhp291:3": "mržnje prepun, "
+  "dhp291:3": "mržnje prepun, ",
+  "dhp291:4": "takav se mržnje nikad ne oslobađa. "
 }
