Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -9,5 +9,6 @@
   "dhp291:1": "Ko sebi sreću gradi ",
   "dhp291:2": "stvarajući muku drugima, ",
   "dhp291:3": "mržnje prepun, ",
-  "dhp291:4": "takav se mržnje nikad ne oslobađa. "
+  "dhp291:4": "takav se mržnje nikad ne oslobađa. ",
+  "dhp292:1": "Ono što treba da uradi odbacuje, "
 }
