--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -10,5 +10,6 @@
   "dhp291:2": "stvarajući muku drugima, ",
   "dhp291:3": "mržnje prepun, ",
   "dhp291:4": "takav se mržnje nikad ne oslobađa. ",
-  "dhp292:1": "Ono što treba da uradi odbacuje, "
+  "dhp292:1": "Ono što treba da uradi odbacuje, ",
+  "dhp292:2": "a što ne treba da uradi čini; "
 }
