Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -11,5 +11,6 @@
   "dhp291:3": "mržnje prepun, ",
   "dhp291:4": "takav se mržnje nikad ne oslobađa. ",
   "dhp292:1": "Ono što treba da uradi odbacuje, ",
-  "dhp292:2": "a što ne treba da uradi čini; "
+  "dhp292:2": "a što ne treba da uradi čini; ",
+  "dhp292:3": "u sujetnom i nepažljivome "
 }
