Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -13,5 +13,6 @@
   "dhp292:1": "Ono što treba da uradi odbacuje, ",
   "dhp292:2": "a što ne treba da uradi čini; ",
   "dhp292:3": "u sujetnom i nepažljivome ",
-  "dhp292:4": "svakakvo zlo buja. "
+  "dhp292:4": "svakakvo zlo buja. ",
+  "dhp293:1": "Oni čija je pažnja "
 }
