--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -14,5 +14,6 @@
   "dhp292:2": "a što ne treba da uradi čini; ",
   "dhp292:3": "u sujetnom i nepažljivome ",
   "dhp292:4": "svakakvo zlo buja. ",
-  "dhp293:1": "Oni čija je pažnja "
+  "dhp293:1": "Oni čija je pažnja ",
+  "dhp293:2": "neprekidno i čvrsto na telu, "
 }
