Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -15,5 +15,6 @@
   "dhp292:3": "u sujetnom i nepažljivome ",
   "dhp292:4": "svakakvo zlo buja. ",
   "dhp293:1": "Oni čija je pažnja ",
-  "dhp293:2": "neprekidno i čvrsto na telu, "
+  "dhp293:2": "neprekidno i čvrsto na telu, ",
+  "dhp293:3": "takvi ne čine ono što činiti ne treba, "
 }
