--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -16,5 +16,6 @@
   "dhp292:4": "svakakvo zlo buja. ",
   "dhp293:1": "Oni čija je pažnja ",
   "dhp293:2": "neprekidno i čvrsto na telu, ",
-  "dhp293:3": "takvi ne čine ono što činiti ne treba, "
+  "dhp293:3": "takvi ne čine ono što činiti ne treba, ",
+  "dhp293:4": "ali čine ono što treba. "
 }
