Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -17,5 +17,6 @@
   "dhp293:1": "Oni čija je pažnja ",
   "dhp293:2": "neprekidno i čvrsto na telu, ",
   "dhp293:3": "takvi ne čine ono što činiti ne treba, ",
-  "dhp293:4": "ali čine ono što treba. "
+  "dhp293:4": "ali čine ono što treba. ",
+  "dhp293:5": "Nečistoće u tako sabranima, znalcima, "
 }
