--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -20,5 +20,6 @@
   "dhp293:4": "ali čine ono što treba. ",
   "dhp293:5": "Nečistoće u tako sabranima, znalcima, ",
   "dhp293:6": "lagano nestaju. ",
-  "dhp294:1": "Ubivši u sebi majku, oca "
+  "dhp294:1": "Ubivši u sebi majku, oca ",
+  "dhp294:2": "i dva kralja ratnika, "
 }
