Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -21,5 +21,6 @@
   "dhp293:5": "Nečistoće u tako sabranima, znalcima, ",
   "dhp293:6": "lagano nestaju. ",
   "dhp294:1": "Ubivši u sebi majku, oca ",
-  "dhp294:2": "i dva kralja ratnika, "
+  "dhp294:2": "i dva kralja ratnika, ",
+  "dhp294:3": "razorivši zemlju, a s njom i podanike, "
 }
