Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -24,5 +24,6 @@
   "dhp294:2": "i dva kralja ratnika, ",
   "dhp294:3": "razorivši zemlju, a s njom i podanike, ",
   "dhp294:4": "bez kajanja odlazi braman. ",
-  "dhp295:1": "Ubivši u sebi majku, oca "
+  "dhp295:1": "Ubivši u sebi majku, oca ",
+  "dhp295:2": "i dva učena kralja, "
 }
