--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -26,5 +26,6 @@
   "dhp294:4": "bez kajanja odlazi braman. ",
   "dhp295:1": "Ubivši u sebi majku, oca ",
   "dhp295:2": "i dva učena kralja, ",
-  "dhp295:3": "razorivši put opasnosti, "
+  "dhp295:3": "razorivši put opasnosti, ",
+  "dhp295:4": "bez kajanja odlazi braman. "
 }
