Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -28,5 +28,6 @@
   "dhp295:2": "i dva učena kralja, ",
   "dhp295:3": "razorivši put opasnosti, ",
   "dhp295:4": "bez kajanja odlazi braman. ",
-  "dhp296:1": "Učenici Gotamini, "
+  "dhp296:1": "Učenici Gotamini, ",
+  "dhp296:2": "čija je sabranost dan i noć "
 }
