Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -29,5 +29,6 @@
   "dhp295:3": "razorivši put opasnosti, ",
   "dhp295:4": "bez kajanja odlazi braman. ",
   "dhp296:1": "Učenici Gotamini, ",
-  "dhp296:2": "čija je sabranost dan i noć "
+  "dhp296:2": "čija je sabranost dan i noć ",
+  "dhp296:3": "okrenuta Budi, "
 }
