--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -30,5 +30,6 @@
   "dhp295:4": "bez kajanja odlazi braman. ",
   "dhp296:1": "Učenici Gotamini, ",
   "dhp296:2": "čija je sabranost dan i noć ",
-  "dhp296:3": "okrenuta Budi, "
+  "dhp296:3": "okrenuta Budi, ",
+  "dhp296:4": "oni su uvek do kraja probuđeni. "
 }
