Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -31,5 +31,6 @@
   "dhp296:1": "Učenici Gotamini, ",
   "dhp296:2": "čija je sabranost dan i noć ",
   "dhp296:3": "okrenuta Budi, ",
-  "dhp296:4": "oni su uvek do kraja probuđeni. "
+  "dhp296:4": "oni su uvek do kraja probuđeni. ",
+  "dhp297:1": "Učenici Gotamini, "
 }
