Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -35,5 +35,6 @@
   "dhp297:1": "Učenici Gotamini, ",
   "dhp297:2": "čija je sabranost dan i noć ",
   "dhp297:3": "okrenuta Dhammi, ",
-  "dhp297:4": "oni su uvek do kraja probuđeni. "
+  "dhp297:4": "oni su uvek do kraja probuđeni. ",
+  "dhp298:1": "Učenici Gotamini, "
 }
