Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -36,5 +36,6 @@
   "dhp297:2": "čija je sabranost dan i noć ",
   "dhp297:3": "okrenuta Dhammi, ",
   "dhp297:4": "oni su uvek do kraja probuđeni. ",
-  "dhp298:1": "Učenici Gotamini, "
+  "dhp298:1": "Učenici Gotamini, ",
+  "dhp298:2": "čija je sabranost dan i noć "
 }
