--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -40,5 +40,6 @@
   "dhp298:2": "čija je sabranost dan i noć ",
   "dhp298:3": "okrenuta Sanghi, ",
   "dhp298:4": "oni su uvek do kraja probuđeni. ",
-  "dhp299:1": "Učenici Gotamini, "
+  "dhp299:1": "Učenici Gotamini, ",
+  "dhp299:2": "čija je sabranost dan i noć "
 }
