--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -42,5 +42,6 @@
   "dhp298:4": "oni su uvek do kraja probuđeni. ",
   "dhp299:1": "Učenici Gotamini, ",
   "dhp299:2": "čija je sabranost dan i noć ",
-  "dhp299:3": "okrenuta telu, "
+  "dhp299:3": "okrenuta telu, ",
+  "dhp299:4": "oni su uvek do kraja probuđeni. "
 }
