--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -45,5 +45,6 @@
   "dhp299:3": "okrenuta telu, ",
   "dhp299:4": "oni su uvek do kraja probuđeni. ",
   "dhp300:1": "Učenici Gotamini, ",
-  "dhp300:2": "čiji je um dan i noć "
+  "dhp300:2": "čiji je um dan i noć ",
+  "dhp300:3": "okrenut nenasilju, "
 }
