Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -48,5 +48,6 @@
   "dhp300:2": "čiji je um dan i noć ",
   "dhp300:3": "okrenut nenasilju, ",
   "dhp300:4": "oni su uvek do kraja probuđeni. ",
-  "dhp301:1": "Učenici Gotamini, "
+  "dhp301:1": "Učenici Gotamini, ",
+  "dhp301:2": "čiji je um dan i noć "
 }
