Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -49,5 +49,6 @@
   "dhp300:3": "okrenut nenasilju, ",
   "dhp300:4": "oni su uvek do kraja probuđeni. ",
   "dhp301:1": "Učenici Gotamini, ",
-  "dhp301:2": "čiji je um dan i noć "
+  "dhp301:2": "čiji je um dan i noć ",
+  "dhp301:3": "okrenut meditaciji, "
 }
