--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -50,5 +50,6 @@
   "dhp300:4": "oni su uvek do kraja probuđeni. ",
   "dhp301:1": "Učenici Gotamini, ",
   "dhp301:2": "čiji je um dan i noć ",
-  "dhp301:3": "okrenut meditaciji, "
+  "dhp301:3": "okrenut meditaciji, ",
+  "dhp301:4": "oni su uvek do kraja probuđeni. "
 }
