Translations by HarDao to translation/pl/hardao/sutta/kn/dhp/dhp157-166_translation-pl-hardao.json

--- a/translation/pl/hardao/sutta/kn/dhp/dhp157-166_translation-pl-hardao.json
+++ b/translation/pl/hardao/sutta/kn/dhp/dhp157-166_translation-pl-hardao.json
@@ -1,3 +1,4 @@
 {
-  "dhp160:1": "Każdy sam sobie jest obrońcą, "
+  "dhp160:1": "Każdy sam sobie jest obrońcą, ",
+  "dhp160:2": "któż inny mógłby być czyimś obrońcą? "
 }
