Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -52,5 +52,6 @@
   "dhp301:2": "čiji je um dan i noć ",
   "dhp301:3": "okrenut meditaciji, ",
   "dhp301:4": "oni su uvek do kraja probuđeni. ",
-  "dhp302:1": "Teško je monah postati, teško se tome radovati, "
+  "dhp302:1": "Teško je monah postati, teško se tome radovati, ",
+  "dhp302:2": "teško kuću kućiti, "
 }
