Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -53,5 +53,6 @@
   "dhp301:3": "okrenut meditaciji, ",
   "dhp301:4": "oni su uvek do kraja probuđeni. ",
   "dhp302:1": "Teško je monah postati, teško se tome radovati, ",
-  "dhp302:2": "teško kuću kućiti, "
+  "dhp302:2": "teško kuću kućiti, ",
+  "dhp302:3": "teško je društvo nedoraslih, "
 }
