Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp290-305_translation-sr-brankokovacevic.json
@@ -54,5 +54,6 @@
   "dhp301:4": "oni su uvek do kraja probuđeni. ",
   "dhp302:1": "Teško je monah postati, teško se tome radovati, ",
   "dhp302:2": "teško kuću kućiti, ",
-  "dhp302:3": "teško je društvo nedoraslih, "
+  "dhp302:3": "teško je društvo nedoraslih, ",
+  "dhp302:4": "preporađanje je uvek bolno, "
 }
